--- a/portafolio.html
+++ b/portafolio.html
@@ -1,4 +1,80 @@
- 
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+     <title>Prueba de Bootstrap</title>
+     <link href="css/bootstrap.css" rel="stylesheet">
+     <meta name="viewport" content="width=device-width,inicial-scale=1">
+ </head>
+ <body>
+
+    <div class="container">|
+
+        <div class="row">
+            <div class="col-lg-4" style="background-color: #aaa;">
+                <h1>Columna 1</h1>
+                <p>Esto es una prueba de bootstrap</p>
+            </div>
+            <div class="col-lg-4" style="background-color: #bbb;">
+                <h1>Columna 2</h1>
+                <p>Esto es una prueba de bootstrap</p>
+            </div>
+            <div class="col-lg-4" style="background-color: #ccc;">
+                <h1>Columna 3</h1>
+                <p>Esto es una prueb de bootstrap</p>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <div class="col-lg-4" style="background-color: #aaa;">
+                <h1>Columna 1</h1>
+                <p>Esto es una prueba de bootstrap</p>
+            </div>
+            <div class="col-lg-4" style="background-color: #bbb;">
+                <h1>Columna 2</h1>
+                <p>Esto es una prueba de bootstrap</p>
+            </div>
+        </div>    
+
+        <hr>
+
+        <div class="row">
+            <div class="col-lg-4" style="background-color: #aaa;">
+                <h1>Columna 1</h1>
+                <p>Esto es una prueba de bootstrap</p>
+            </div>
+            <div class="col-lg-4" style="background-color: #bbb;">
+                <h1>Columna 2</h1>
+                <p>Esto es una prueba de bootstrap</p>
+            </div>
+            <div class="col-lg-4" style="background-color: #ccc;">
+                <h1>Columna 3</h1>
+                <p>Esto es una prueb de bootstrap</p>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <div class="col-lg-4" style="background-color: #aaa;">
+                <h1>Columna 1</h1>
+                <p>Esto es una prueba de bootstrap</p>
+            </div>
+            <div class="col-lg-4" style="background-color: #bbb;">
+                <h1>Columna 2</h1>
+                <p>Esto es una prueba de bootstrap</p>
+            </div>
+            <div class="col-lg-4" style="background-color: #ccc;">
+                <h1>Columna 3</h1>
+                <p>Esto es una prueb de bootstrap</p>
+            </div>
+        </div>
+
+    </div>
+     
+ </body>
+ </html>
 <div class="container">
     <div class="row">
     <div class="col-sm-4">
