--- a/portafolio.html
+++ b/portafolio.html
@@ -1,93 +1,88 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
-     <title>Prueba de Bootstrap</title>
-     <link href="css/bootstrap.css" rel="stylesheet">
-     <meta name="viewport" content="width=device-width,inicial-scale=1">
- </head>
- <body>
-
-    <div class="container">|
-        
-        <hr>
-
-        <div class="row">
-            <div class="col-lg-4" style="background-color: #aaa;">
-                <h1>Columna 1</h1>
-                <p>Esto es una prueba de bootstrap</p>
-            </div>
-            <div class="col-lg-4" style="background-color: #bbb;">
-                <h1>Columna 2</h1>
-                <p>Esto es una prueba de bootstrap</p>
-            </div>
-            <div class="col-lg-4" style="background-color: #ccc;">
-                <h1>Columna 3</h1>
-                <p>Esto es una prueb de bootstrap</p>
-            </div>
-        </div>
-
-        <hr>
-
-         <div class="row">
-            <div class="col-lg-4" style="background-color: #aaa;">
-                <h1>Columna 1</h1>
-                <p>Esto es una prueba de bootstrap</p>
-            </div>
-            <div class="col-lg-4" style="background-color: #bbb;">
-                <h1>Columna 2</h1>
-                <p>Esto es una prueba de bootstrap</p>
-            </div>
-            <div class="col-lg-4" style="background-color: #ccc;">
-                <h1>Columna 3</h1>
-                <p>Esto es una prueb de bootstrap</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA_Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Portafolio Videos</title>
+    <link rel="stylesheet" href="css/EstilosRedesSociales.css">
+    <link rel="stylesheet" href="css/fontsRedesSociales.css">
+    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+</head>
+<body>
+    <header>
+        <div class="contenedor">
+            <nav class="menu">
+                <a href="index.html">Inicio</a>
+                <a href="acerca.html">Acerca de</a>
+                <a href="portafolio.html">Portafolio</a>
+                <a href="contacto.html">Contacto</a>
+            </nav>
+            <div class="contenido-header">
+                <h1 class="titulo-header">DEVELOPER STEFANNY</h1>
+                <span class="linea-header"></span>
+                <h2 class="texto-header">Servicios de Tecnologías<span class="desaparecer">de Información</span></h2>
             </div>
         </div>
-
-    </div>
-     
- </body>
- </html>
+    </header>
 <div class="container">
-    <div class="row">
-    <div class="col-sm-4">
-    <div class="embed-responsive embed-responsive-16by9">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/tIRBQBfngnY?list=TLGG2a6DbK0ovY0yODA0MjAyMQ" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <a href="#" target="_blank" title="ver PDF">ver mas..</a>
-    </div>
-    <div class="col-sm-4">
-      <div class="embed-responsive embed-responsive-16by9">
-          <video controls src="video/video_certus.mp4"></video>
+<br>
+<br>
+<div class="social">
+    <ul>
+        <li><a href="" target="_blank" class="icon-facebook"></a></li>
+         <li><a href="" target="_blank" class="icon-twitter"></a></li>
+         <li><a href="" target="_blank" class="icon-google"></a></li>
+         <li><a href="" target="_blank" class="icon-mail"></a></li>
+         <li><a href="" target="_blank" class="icon-pinterest"></a></li>
+        <li><a href="" target="_blank" class="icon-tablet"></a></li>
+     </ul>
+</div>
+    <div class="container">
+<div class="row">
+        <div class="col-sm-4">
+               <div class="embed-responsive embed-respondive-16by9">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/hHWBIg5CEto" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+               </div>
+               <a href="#" target="_blank" title="ver PDF">ver más...</a>
+     </div>
+     <div class="col-sm-4">
+            <div class="embed-responsive embed-responsive-16by9">
+                <video width="560" height="315" controls src="video/video_certus.mp4"></video>
           </div>
-          <a href="https://www.youtube.com/watch?v=MoB81YhNbVo" target="_blank" title="ver PDF">ver mas..</a>
-        </div>
+             <a href="https://www.youtube.com/whatch?v=MoB81YhNbVo" target="_blank" title="ver PDF">ver más...</a>
+     </div>
         <div class="col-sm-4">
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Knvy-ZobFQo" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <a href="#" target="_blank" title="ver PDF">ver mas..</a>
-                </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                    <div class="col-sm-4">
-                    <div class="embed-responsive embed-responsive-16by9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/6lJzoE--hGE" frameboard="0" allowfullscreen></iframe>
-                    </div>
-                    <a href="https://wwww.youtube.com/watch?v=DRdrK-cxFWc" target="_blank" title="ver PDF">ver mas..</a>
-                    <div class="col-sm-4">
-                        <div class="embed-responsive embed-responsive-16by9">
-                        <iframe width="560" height="315" src="htpps://www.youtube.com/embed/0UH5xaeZgOA" frameborder="0" allowfullscreen></iframe>
-                    </div>
-                    <a href="#" target="_blank" title="ver PDF">ver mas..</a>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/KO71eLIqCwA" frameborder="0" allowfullscreen></iframe>
-                    </div>
-                    <a href="https://youtu.be/KO71eLIqCwA" target="_blank" title="ver PDF">ver mas..</a>
-                    </div>
-                    </div>
-                    </div>
-                </body>
-                </html>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/YUxtmyUfJUc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <a href="#" target="_blank" title="ver PDF">ver más...</a>
+        </div>
+        </div>
+</div> 
+   <hr>
+   <div class="container">
+<div class="row">
+       <div class="col-sm-4">
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/oFzKpbi4vZ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+                <a href="https://www.youtube.com/watch?v=oFzKpbi4vZ0" target="_blank" title="ver PDF">ver más...</a>
+     </div>
+     <div class="col-sm-4">
+           <div class="embed-responsive embed-responsive-16by9">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/g7snqCRIDNg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           </div>
+              <a href="#" target="_blank" title="ver PDF">ver más...</a>
+     </div>
+       <div class="col-sm-4">
+           <div class="embed-responsive embed-responsive-16by9">
+                     <iframe width="560" height="315" src="https://www.youtube.com/embed/-6XX6CJKfvs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+               </div>
+                     <a href="https://www.youtube.com/watch?v=-6XX6CJKfvs" target="_blank" title="ver PDF">ver más...</a>
+       </div>     
+   </div>       
+</div>    
+</body>
+</html>
