--- a/portafolio.html
+++ b/portafolio.html
@@ -7,7 +7,7 @@
     <title>Portafolio Videos</title>
     <link rel="stylesheet" href="css/EstilosRedesSociales.css">
     <link rel="stylesheet" href="css/fontsRedesSociales.css">
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
