--- a/portafolio.html
+++ b/portafolio.html
@@ -20,7 +20,7 @@
                 <a href="contacto.html">Contacto</a>
             </nav>
             <div class="contenido-header">
-                <h1 class="titulo-header">DEVELOPER DAVID</h1>
+                <h1 class="titulo-header"> DEVELOPER DAVID</h1>
                 <span class="linea-header"></span>
                 <h2 class="texto-header">Servicios de Tecnologías<span class="desaparecer">de Información</span></h2>
             </div>
@@ -39,50 +39,47 @@
         <li><a href="" target="_blank" class="icon-tablet"></a></li>
      </ul>
 </div>
-    <div class="container">
-<div class="row">
-        <div class="col-sm-4">
-               <div class="embed-responsive embed-respondive-16by9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/hHWBIg5CEto" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-               </div>
-               <a href="#" target="_blank" title="ver PDF">ver más...</a>
-     </div>
-     <div class="col-sm-4">
-            <div class="embed-responsive embed-responsive-16by9">
-                <video width="560" height="315" controls src="video/video_certus.mp4"></video>
+<div class="container">
+    <div class="row">
+    <div class="col-sm-4">
+    <div class="embed-responsive embed-responsive-16by9">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/tIRBQBfngnY?list=TLGG2a6DbK0ovY0yODA0MjAyMQ" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <a href="#" target="_blank" title="ver PDF">ver mas..</a>
+    </div>
+    <div class="col-sm-4">
+      <div class="embed-responsive embed-responsive-16by9">
+          <video controls src="video/video_certus.mp4"></video>
           </div>
-             <a href="https://www.youtube.com/whatch?v=MoB81YhNbVo" target="_blank" title="ver PDF">ver más...</a>
-     </div>
+          <a href="https://www.youtube.com/watch?v=MoB81YhNbVo" target="_blank" title="ver PDF">ver mas..</a>
+        </div>
         <div class="col-sm-4">
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/YUxtmyUfJUc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <a href="#" target="_blank" title="ver PDF">ver más...</a>
-        </div>
-        </div>
-</div> 
-   <hr>
-   <div class="container">
-<div class="row">
-       <div class="col-sm-4">
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/oFzKpbi4vZ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-                <a href="https://www.youtube.com/watch?v=oFzKpbi4vZ0" target="_blank" title="ver PDF">ver más...</a>
-     </div>
-     <div class="col-sm-4">
-           <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/g7snqCRIDNg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-           </div>
-              <a href="#" target="_blank" title="ver PDF">ver más...</a>
-     </div>
-       <div class="col-sm-4">
-           <div class="embed-responsive embed-responsive-16by9">
-                     <iframe width="560" height="315" src="https://www.youtube.com/embed/-6XX6CJKfvs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-               </div>
-                     <a href="https://www.youtube.com/watch?v=-6XX6CJKfvs" target="_blank" title="ver PDF">ver más...</a>
-       </div>     
-   </div>       
-</div>    
-</body>
-</html>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Knvy-ZobFQo" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <a href="#" target="_blank" title="ver PDF">ver mas..</a>
+                </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                    <div class="col-sm-4">
+                    <div class="embed-responsive embed-responsive-16by9">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/6lJzoE--hGE" frameboard="0" allowfullscreen></iframe>
+                    </div>
+                    <a href="https://wwww.youtube.com/watch?v=DRdrK-cxFWc" target="_blank" title="ver PDF">ver mas..</a>
+                    <div class="col-sm-4">
+                        <div class="embed-responsive embed-responsive-16by9">
+                        <iframe width="560" height="315" src="htpps://www.youtube.com/embed/0UH5xaeZgOA" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    <a href="#" target="_blank" title="ver PDF">ver mas..</a>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/KO71eLIqCwA" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    <a href="https://youtu.be/KO71eLIqCwA" target="_blank" title="ver PDF">ver mas..</a>
+                    </div>
+                    </div>
+                    </div>
+                </body>
+                </html>
