--- a/portafolio.html
+++ b/portafolio.html
@@ -20,7 +20,7 @@
                 <a href="contacto.html">Contacto</a>
             </nav>
             <div class="contenido-header">
-                <h1 class="titulo-header">DEVELOPER CHRISTOFER</h1>
+                <h1 class="titulo-header">DEVELOPER DAVIDS</h1>
                 <span class="linea-header"></span>
                 <h2 class="texto-header">Servicios de Tecnologías<span class="desaparecer">de Información</span></h2>
             </div>
