--- a/contacto.html
+++ b/contacto.html
@@ -31,7 +31,7 @@
 <br>
 <div class="social">
     <ul>
-        <li><a href="" target="_blank" class="icon-facebook"></a></li>
+        <li><a href="https://www.facebook.com/" target="_blank" class="icon-facebook"></a></li>
          <li><a href="" target="_blank" class="icon-twitter"></a></li>
          <li><a href="" target="_blank" class="icon-google"></a></li>
          <li><a href="" target="_blank" class="icon-mail"></a></li>
