--- a/portafolio.html
+++ b/portafolio.html
@@ -31,11 +31,11 @@
 <br>
 <div class="social">
     <ul>
-        <li><a href="" target="_blank" class="icon-facebook"></a></li>
-         <li><a href="" target="_blank" class="icon-twitter"></a></li>
-         <li><a href="" target="_blank" class="icon-google"></a></li>
-         <li><a href="" target="_blank" class="icon-mail"></a></li>
-         <li><a href="" target="_blank" class="icon-pinterest"></a></li>
+        <li><a href="https://www.facebook.com/" target="_blank" class="icon-facebook"></a></li>
+         <li><a href="https://twitter.com/?lang=es" target="_blank" class="icon-twitter"></a></li>
+         <li><a href="https://www.google.com.mx/" target="_blank" class="icon-google"></a></li>
+         <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" class="icon-mail"></a></li>
+         <li><a href="https://www.pinterest.ca/" target="_blank" class="icon-pinterest"></a></li>
         <li><a href="" target="_blank" class="icon-tablet"></a></li>
      </ul>
 </div>
