--- a/contacto.html
+++ b/contacto.html
@@ -32,19 +32,19 @@
 <div class="social">
     <ul>
         <li><a href="https://www.facebook.com/" target="_blank" class="icon-facebook"></a></li>
-         <li><a href="https://twitter.com/?lang=es" target="_blank" class="icon-twitter"></a></li>
-         <li><a href="https://www.google.com.mx/" target="_blank" class="icon-google"></a></li>
-         <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" class="icon-mail"></a></li>
-         <li><a href="https://www.pinterest.ca/" target="_blank" class="icon-pinterest"></a></li>
-        <li><a href="" target="_blank" class="icon-tablet"></a></li>
+        <li><a href="https://twitter.com/?lang=es" target="_blank" class="icon-twitter"></a></li>
+        <li><a href="https://www.google.com.mx/" target="_blank" class="icon-google"></a></li>
+        <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" class="icon-mail"></a></li>
+        <li><a href="https://www.pinterest.ca/" target="_blank" class="icon-pinterest"></a></li>
+       <li><a href="" target="_blank" class="icon-tablet"></a></li>>
      </ul>
 </div>
 <div class="container">
     <div class="row">
     <div class="col-sm-4">
     <div class="embed-responsive embed-responsive-16by9">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/tIRBQBfngnY?list=TLGG2a6DbK0ovY0yODA0MjAyMQ" frameborder="0" allowfullscreen></iframe>
-               </div>
+    <img src="img/7.jpg" alt="">
+               </div>s
                <a href="#" target="_blank" title="ver PDF">ver más...</a>
      </div>
      <div class="col-sm-4">
@@ -60,26 +60,6 @@
             <a href="#" target="_blank" title="ver PDF">ver más...</a>
         </div>
         </div>
-</div> 
-   <hr>
-   <div class="container">
-<div class="row">
-       <div class="col-sm-4">
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/oFzKpbi4vZ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-                <a href="https://www.youtube.com/watch?v=oFzKpbi4vZ0" target="_blank" title="ver PDF">ver más...</a>
-     </div>
-     <div class="col-sm-4">
-           <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/g7snqCRIDNg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-           </div>
-              <a href="#" target="_blank" title="ver PDF">ver más...</a>
-     </div>
-       <div class="col-sm-4">
-           <div class="embed-responsive embed-responsive-16by9">
-                     <iframe width="560" height="315" src="https://www.youtube.com/embed/-6XX6CJKfvs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-               </div>
                      <a href="https://www.youtube.com/watch?v=-6XX6CJKfvs" target="_blank" title="ver PDF">ver más...</a>
        </div>     
    </div>       
