--- a/contacto.html
+++ b/contacto.html
@@ -43,7 +43,7 @@
     <div class="row">
     <div class="col-sm-4">
     <div class="embed-responsive embed-responsive-16by9">
-    <img src="img/7.jpg" alt="">
+    <img src="img/7.jpg" width="150" height="150" alt="">
                </div>s
                <a href="#" target="_blank" title="ver PDF">ver más...</a>
      </div>
