--- a/contacto.html
+++ b/contacto.html
@@ -43,24 +43,25 @@
     <div class="row">
     <div class="col-sm-4">
     <div class="embed-responsive embed-responsive-16by9">
-    <img src="img/7.jpg" width="500" height="300" alt="">
-               </div>s
-               <a href="#" target="_blank" title="ver PDF">ver más...</a>
+    <img src="img/7.jpg" width="400" height="200" alt="">
+               </div>
+               <a href="https://www.youtube.com/watch?v=BqGufV8aXhY" target="_blank" title="ver PDF">ver más...</a>
      </div>
      <div class="col-sm-4">
             <div class="embed-responsive embed-responsive-16by9">
-                <video width="560" height="315" controls src="video/video_certus.mp4"></video>
+                <p><h4>Si tienes una página web, o deseas tener una, y quieres obtener beneficios reales de esta, vas a necesitar la ayuda de un consultor web profesional que se encargue de todos los aspectos de tu negocio, desde su estructura inicial hasta su funcionalidad,
+                     SEO y mucho más, pero ¿qué es y qué hace exactamente un consultor web? ¿Cómo elegir al mejor?</h4></p>
           </div>
-             <a href="https://www.youtube.com/whatch?v=MoB81YhNbVo" target="_blank" title="ver PDF">ver más...</a>
+             <a href="https://www.youtube.com/watch?v=BqGufV8aXhY" target="_blank" title="ver PDF">ver más...</a>
      </div>
         <div class="col-sm-4">
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/YUxtmyUfJUc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="700" height="394" src="https://www.youtube.com/embed/Ay61xBdrXao" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <a href="#" target="_blank" title="ver PDF">ver más...</a>
         </div>
         </div>
-                     <a href="https://www.youtube.com/watch?v=-6XX6CJKfvs" target="_blank" title="ver PDF">ver más...</a>
+                     <a href="https://www.youtube.com/watch?v=Ay61xBdrXao" target="_blank" title="ver PDF">ver más...</a>
        </div>     
    </div>       
 </div>    
