--- a/acerca.html
+++ b/acerca.html
@@ -43,19 +43,22 @@
     <div class="row">
     <div class="col-sm-4">
     <div class="embed-responsive embed-responsive-16by9">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/tIRBQBfngnY?list=TLGG2a6DbK0ovY0yODA0MjAyMQ" frameborder="0" allowfullscreen></iframe>
-               </div>s
-               <a href="#" target="_blank" title="ver PDF">ver más...</a>
+        <iframe width="700" height="394" src="https://www.youtube.com/embed/QTDPOxnfRaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+               </div>
+               <a href="" target="_blank" title="ver PDF">ver más...</a>
      </div>
      <div class="col-sm-4">
             <div class="embed-responsive embed-responsive-16by9">
-                <video width="560" height="315" controls src="video/video_certus.mp4"></video>
+               <img width="500" height="200" src="img/8.jpg"  alt="">
           </div>
              <a href="https://www.youtube.com/whatch?v=MoB81YhNbVo" target="_blank" title="ver PDF">ver más...</a>
      </div>
         <div class="col-sm-4">
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/YUxtmyUfJUc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p ><h5>Los Desarrolladores Web diseñan, crean y realizan mantenimiento a páginas y aplicaciones web, en tal sentido, trabajan en sitios de internet y de intranet. Por lo general, son empleados por empresas especializadas en el desarrollo de programas especializados o en consultoría informática. Estos profesionales tienen la opción de trabajar directamente para la corporación o de manera independiente o a destajo.
+
+
+                    La mayoría de los Desarrolladores Web trabajan en el software, en la base de datos o en la codificación de un sitio web. Por otro lado, hay otros quienes lidian con el diseño y la interfaz de la página. </h5></p>
             </div>
             <a href="#" target="_blank" title="ver PDF">ver más...</a>
         </div>
