--- a/acerca.html
+++ b/acerca.html
@@ -43,15 +43,15 @@
     <div class="row">
     <div class="col-sm-4">
     <div class="embed-responsive embed-responsive-16by9">
-        <iframe width="700" height="394" src="https://www.youtube.com/embed/QTDPOxnfRaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="853" height="480" src="https://www.youtube.com/embed/-qlU9j5LR7Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                </div>
                <a href="" target="_blank" title="ver PDF">ver más...</a>
      </div>
      <div class="col-sm-4">
             <div class="embed-responsive embed-responsive-16by9">
-               <img width="500" height="200" src="img/8.jpg"  alt="">
+               <img width="500" height="200" src="img/7.jpg"  alt="">
           </div>
-             <a href="https://www.youtube.com/whatch?v=MoB81YhNbVo" target="_blank" title="ver PDF">ver más...</a>
+             <a href="https://www.youtube.com/embed/-qlU9j5LR7Y" target="_blank" title="ver PDF">ver más...</a>
      </div>
         <div class="col-sm-4">
             <div class="embed-responsive embed-responsive-16by9">
